--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -88,12 +88,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
+    # - uses: actions/setup-python@v5
+    #   with:
+    #     python-version: '3.10'
 
     - name: Prepare models
+      shell: pwsh
       run: | 
+        conda --version
+        conda activate base
         python --version
         pip install huggingface_hub
         python .github/download_models.py --model-dir ${{ matrix.modeldir }} --model-list LLama.Benchmark/Assets/models.txt --endpoint https://hf-mirror.com
