--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -95,6 +95,7 @@ jobs:
     - name: Prepare models
       shell: pwsh
       run: | 
+        whoami
         conda --version
         conda activate base
         python --version
