--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -77,6 +77,9 @@ jobs:
     if: contains(github.event.pull_request.labels.*.name, 'benchmark')
     runs-on: [self-hosted, windows, gpu]
 
+    env:
+      AGENT_TOOLSDIRECTORY: D:\Libs\github\runner-cache
+
     strategy:
       fail-fast: false
       matrix:
