--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -89,6 +89,11 @@ jobs:
             modeldir: F:\Models
 
     steps:
+    - name: Settings
+      run: |
+        set http_proxy=127.0.0.1:7891
+        set https_proxy=127.0.0.1:7891
+
     - uses: actions/checkout@v4
 
     - uses: actions/setup-python@v5
@@ -96,7 +101,6 @@ jobs:
         python-version: '3.10'
 
     - name: Prepare models
-      shell: pwsh
       run: | 
         whoami
         python --version
