--- a/.github/workflows/release-minor.yml
+++ b/.github/workflows/release-minor.yml
@@ -74,3 +74,9 @@ jobs:
         mike deploy --push --update-aliases --force $version latest
         mike set-default --push --force latest
         
+    # Upload the native binaries to huggingface (experimental)
+    - name: Upload native binaries to huggingface
+      run: |
+        pip install huggingface_hub
+        llama_cpp_commit_hash=$(git submodule status llama.cpp | cut -c 2-7)
+        python .github/upload_to_hf.py --token ${{ secrets.HUGGINGFACE_TOKEN }} --revision $llama_cpp_commit_hash --folder LLama/runtimes
