--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -315,6 +315,16 @@ jobs:
 
   compile-android:
     name: Compile (Android)
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - build: 'x86'
+            defines: '-DANDROID_ABI=x86'
+          - build: 'x86_64'
+            defines: '-DANDROID_ABI=x86_64'
+          - build: 'arm64-v8a'
+            defines: '-DANDROID_ABI=arm64-v8a'
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
@@ -330,22 +340,22 @@ jobs:
       - name: Build
         id: cmake_build
         env:
-          CMAKE_FLAGS: '-DCMAKE_TOOLCHAIN_FILE=${{ steps.setup-ndk.outputs.ndk-path }}/build/cmake/android.toolchain.cmake -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=android-23'
+          CMAKE_FLAGS: '-DCMAKE_TOOLCHAIN_FILE=${{ steps.setup-ndk.outputs.ndk-path }}/build/cmake/android.toolchain.cmake -DANDROID_PLATFORM=android-23'
         run: |
           mkdir build
           cd build
-          cmake .. ${{ env.COMMON_DEFINE }} ${{ env.CMAKE_FLAGS }}
+          cmake .. ${{ env.COMMON_DEFINE }} ${{ env.CMAKE_FLAGS }} ${{ matrix.defines }}
           cmake --build . --config Release -j ${env:NUMBER_OF_PROCESSORS}
       - name: Upload Llama
         uses: actions/upload-artifact@v4
         with:
           path: ./build/libllama.so
-          name: llama-bin-android-arm64.so
+          name: llama-bin-android-${{ matrix.build }}.so
       - name: Upload Llava
         uses: actions/upload-artifact@v4
         with:
           path: ./build/examples/llava/libllava_shared.so
-          name: llava-bin-android-arm64.so
+          name: llava-bin-android-${{ matrix.build }}.so
 
   
   build-deps:
@@ -420,8 +430,14 @@ jobs:
           cp artifacts/llama-bin-linux-clblast-x64.so/libllama.so deps/clblast/
           cp artifacts/llava-bin-linux-clblast-x64.so/libllava_shared.so deps/clblast/libllava_shared.so
 
-          cp artifacts/llama-bin-android-arm64.so/libllama.so deps/android-arm64/libllama.so
-          cp artifacts/llava-bin-android-arm64.so/libllava_shared.so deps/android-arm64/libllava_shared.so
+          cp artifacts/llama-bin-android-x86.so/libllama.so deps/android-x86/libllama.so
+          cp artifacts/llava-bin-android-x86.so/libllava_shared.so deps/android-x86/libllava_shared.so
+
+          cp artifacts/llama-bin-android-x86_64.so/libllama.so deps/android-x86_64/libllama.so
+          cp artifacts/llava-bin-android-x86_64.so/libllava_shared.so deps/android-x86_64/libllava_shared.so
+          
+          cp artifacts/llama-bin-android-arm64-v8a.so/libllama.so deps/android-arm64-v8a/libllama.so
+          cp artifacts/llava-bin-android-arm64-v8a.so/libllava_shared.so deps/android-arm64-v8a/libllava_shared.so
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
