--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -118,6 +118,8 @@ jobs:
             uses: actions/checkout@v4
             with:
                 repository: ggerganov/llama.cpp
+                fetch-depth: 0
+                ref: '${{ github.event.inputs.llama_cpp_commit }}'
 
           - name: Download dependencies - Linux
             if: ${{ matrix.os == 'ubuntu-22.04' }}
