--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -247,7 +247,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v4
         with:
-          path: ./build/libllama.so
+          path: ./build/src/libllama.so
           name: llama-bin-linux-cublas-cu${{ matrix.cuda }}-x64.so
           if-no-files-found: error
       - name: Upload llava artifacts (Linux)
